Commit with jdk migration